# prediction-market

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.github/workflows/: ci.yml
backend/: CMakeLists.txt  README.md
backend/config/: config.json
backend/include/pm/controllers/: AuthController.h  HealthController.h  MarketController.h  OrderController.h  PortfolioController.h  TradeController.h  WalletController.h
backend/include/pm/repositories/: AuthRepository.h  MarketRepository.h  Matching.h  OrderRepository.h  PortfolioRepository.h  TradeRepository.h  WalletRepository.h
backend/include/pm/services/: AuthService.h  MarketService.h  OrderService.h  PortfolioService.h  TradeService.h  WalletService.h
backend/include/pm/util/: ApiError.h  AuthGuard.h  Expected.h  JsonSerializers.h
backend/include/pm/ws/: MarketRealtimePublisher.h  MarketWsController.h  OrderRealtimePublisher.h  RealtimePublisher.h  TopicSnapshotPublisher.h  TradeRealtimePublisher.h  WalletRealtimePublisher.h  WsCommand.h  WsEnvelope.h  WsHub.h  WsProtocol.h
backend/src/: main.cpp
backend/src/controllers/: AuthController.cpp  HealthController.cpp  MarketController.cpp  OrderController.cpp  PortfolioController.cpp  TradeController.cpp  WalletController.cpp
backend/src/repositories/: AuthRepository.cpp  MarketRepository.cpp  Matching.cpp  OrderRepository.cpp  PortfolioRepository.cpp  TradeRepository.cpp  WalletRepository.cpp
backend/src/services/: AuthService.cpp  MarketService.cpp  OrderService.cpp  PortfolioService.cpp  TradeService.cpp  WalletService.cpp
backend/src/util/: AuthGuard.cpp  JsonSerializers.cpp
backend/src/ws/: MarketRealtimePublisher.cpp  MarketWsController.cpp  OrderRealtimePublisher.cpp  RealtimePublisher.cpp  TopicSnapshotPublisher.cpp  TradeRealtimePublisher.cpp  WalletRealtimePublisher.cpp  WsCommand.cpp  WsEnvelope.cpp  WsHub.cpp  WsProtocol.cpp
build-backend-msvc-ninja/: .ninja_deps  .ninja_log  build.ninja
build-backend-msvc-ninja/config/certs/: server.crt  server.key
db/migrations/: 001_init.sql  001_init_auth_markets.sql  002_admin.sql  002_wallets_cash_ledger.sql  003_positions_shares_ledger.sql  003_wallets_cash_ledger.sql  004_orders.sql  005_trades.sql  006_reservations_and_constraints.sql  007_market_resolution_settlement.sql  008_ws_outbox.sql  009_indexes_perf.sql  010_auth_refresh_token_hash_index.sql  011_markets_archive_status.sql  012_sessions_access_tokens.sql
db/seeds/: dev_admin.sql  dev_markets.sql
deploy/: .env  docker-compose.yml
docs/: api.md
frontend/: CMakeLists.txt
frontend/include/frontend/app/: MarketWindow.h
frontend/include/frontend/network/: ApiParsers.h  ApiTypes.h  MarketApiClient.h  MarketWsClient.h
frontend/include/frontend/repositories/: MarketDetailsRepository.h  MarketsRepository.h  OrdersRepository.h  PortfolioRepository.h  TradesRepository.h
frontend/include/frontend/state/: SessionStore.h
frontend/include/frontend/ui/dialogs/: AuthDialog.h
frontend/include/frontend/ui/pages/: AuthRequiredPage.h  HomePage.h  MarketDetailsPage.h  MarketsPage.h  OrdersPage.h  PortfolioPage.h  ProfilePage.h
frontend/src/: main.cpp
frontend/src/app/: MarketWindow.cpp  MarketWindow.h
frontend/src/network/: ApiParsers.cpp  MarketApiClient.cpp  MarketApiClient.h  MarketWsClient.cpp
frontend/src/repositories/: MarketDetailsRepository.cpp  MarketsRepository.cpp  OrdersRepository.cpp  PortfolioRepository.cpp  TradesRepository.cpp
frontend/src/state/: SessionStore.cpp
frontend/src/ui/: HeaderBar.cpp  HeaderBar.h  MarketCardWidget.cpp  MarketCardWidget.h  Sidebar.cpp  Sidebar.h
frontend/src/ui/dialogs/: AuthDialog.cpp
frontend/src/ui/pages/: AuthRequiredPage.cpp  HomePage.cpp  MarketDetailsPage.cpp  MarketDetailsPage.h  MarketsPage.cpp  MarketsPage.h  OrdersPage.cpp  PortfolioPage.cpp  ProfilePage.cpp  ProfilePage.h  TradesPage.cpp  TradesPage.h
scripts/: check_all_bearer_full.sh  db_migrate.ps1  db_migrate.sh  db_seed_dev.ps1  db_seed_dev.sh  dev_db_up.ps1  dev_db_up.sh  gen_dev_certs.ps1  gen_dev_certs.sh
tests/: CMakeLists.txt
tests/common/: ScenarioSupport.h
tests/integration/: test_ws_scenarios.cpp
